Center map on clicked marker. Incorporate bootstrap to avoid viewport overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,12 @@ body {
 body,
 html,
 .map,
-.wrapper {
+.wrapper,
+.col-md-12 {
 	width: 100%;
 	height: 100%;
 	font-size: 100%;
+
 }
 
 a {
